# CS122A-Final-Project---VIPER

./: .gitignore  README.md  pixel_capture_tb
docs/:  lcd_timing_diagram.md  ov7670_register_table.md
fpga/: Makefile
fpga/src/camera/: pixel_capture.sv  xclk_gen.sv
fpga/src/constraints/: camera.lpf
fpga/src/display/: lcd_timing.sv  line_buffer.sv
fpga/src/spi/: spi_slave.sv
fpga/src/tb/: pixel_capture_tb.sv  top_tb.sv
fpga/src/top/: top.sv
pico/: CMakeLists.txt
pico/src/buzzer/: buzzer.h
pico/src/camera_config/: ov7670_init.c  ov7670_regs.h
pico/src/laser/: laser.c
pico/src/main/: main.c
pico/src/servo/: servo.c
pico/src/spi/: spi_master.c  spi_master.h
shared/: interface_contract.md  pin_assignments.md
